--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
-    "discord-oauth2": "^2.6.0",
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "mongodb": "^3.6.9",
@@ -15,6 +14,7 @@
     "eslint": "^7.29.0"
   },
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
