--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "commonjs": true,
         "es2021": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 2019
     },
     "rules": {}
 }
